2000-04-16  Anthony Green  <green@redhat.com>

	* libjava.compile/PR207.java: New file.
	libjava.compile/PR207_A.java: New file.
	libjava.compile/PR206.java: New file.
	libjava.compile/PR206_A.java: New file.

2000-04-14  Bryce McKinlay  <bryce@albatross.co.nz>

	Additional test for PR gcj/148:
	* libjava.compile/assignment_2.java: New file.

2000-03-28  Bryce McKinlay  <bryce@albatross.co.nz>

	Test case for PR libgcj/184:
	* libjava.lang/pr184.java: New file.
	* libjava.lang/pr184.out: New file.

2000-03-27  Tom Tromey  <tromey@cygnus.com>

	* libjava.lang/test_long.out: New file.
	* libjava.lang/test_long.java: New file.

2000-03-26  Tom Tromey  <tromey@cygnus.com>

	* libjava.lang/Array_1.xfail: Removed.

2000-03-23  Bryce McKinlay  <bryce@albatross.co.nz>

	* libjava.lang/Thread_Wait.java: New file.
	* libjava.lang/Thread_Sleep.java: New file.
	* libjava.lang/Thread_Monitor.java: New file.
	* libjava.lang/Thread_Wait.out: New file.
	* libjava.lang/Thread_Sleep.out: New file.
	* libjava.lang/Thread_Monitor.out: New file.
	* libjava.lang/Thread_Interrupt.java: New file.
	* libjava.lang/Thread_Wait_2.java: New file.
	* libjava.lang/Thread_Wait_2.out: New file.
	* libjava.lang/Thread_Wait_Interrupt.java: New file.
	* libjava.lang/Thread_Wait_Interrupt.out: New file.
	* libjava.lang/Thread_Interrupt.out: New file.
	* libjava.lang/Thread_Join.java: New file.
	* libjava.lang/Thread_Join.out: New file.
	* libjava.lang/Thread_Alive.java: New file.
	* libjava.lang/Thread_Alive.out: New file.

2000-03-22  Tom Tromey  <tromey@cygnus.com>

	* libjava.compile/iface.java: New file.
	* libjava.compile/static_3.java: New file.
	* libjava.compile/static_2.java: New file.
	* libjava.compile/static_1.xfail: New file.
	* libjava.compile/static_1.java: New file.
	* libjava.compile/redef6.xfail: New file.
	* libjava.compile/redef6.java: New file.
	* libjava.compile/redef5.xfail: New file.
	* libjava.compile/redef5.java: New file.
	* libjava.compile/redef4.xfail: New file.