@@ -1,5 +1,9 @@
 2000-04-16  Anthony Green  <green@redhat.com>
 
+	* libjava.compile/PR208.java: New file.
+
+2000-04-16  Anthony Green  <green@redhat.com>
+
 	* libjava.compile/PR207.java: New file.
 	libjava.compile/PR207_A.java: New file.
 	libjava.compile/PR206.java: New file.
